# Project-Web-App

./: .GC.py.kate-swp  .env  .flaskenv  .gitignore  GC.py  News.txt  Pipfile  Procfile  Tutorial.txt  app.db  app.sqlite3  config.py  pyproject.toml  repair_annotations.py  requirements.txt  setup.bat  setup.sh  setup_gals_db.py  setup_users_db.py  setupdb.py  test.py  todo.txt
app/: .routes.py.kate-swp  __init__.py  draw.py  forms.py  models.py  routes.py  utils.py  views.py
app/auth/: __init__.py  forms.py  routes.py
app/errors/: handlers.py
app/main/: forms.py  routes.py  views.py
app/static/: JavascriptAdvancedMode.js  JavascriptCanvasDrawer.js  JavascriptCheatSheet.js  JavascriptGalaxySearch.js  JavascriptHamburgerMenu.js  JavascriptLoadData.js  JavascriptSlideshow.js  JavascriptSubmission.js  JavascriptTableManager.js  JavascriptWindowResize.js  StylingCanvas.css  StylingCheatSheet.css  StylingFundingTeam.css  StylingGalaxySearch.css  StylingHamburgerMenu.css  StylingHeaderFooter.css  StylingHiddenTable.css  StylingHome.css  StylingHomeSlideshow.css  StylingNews.css  StylingScrollbar.css  StylingTutorial.css  annotatePage.css  annotation.css  canvasDrawer.js  canvasImage.js  style.css  tableManager.js  test.js
app/templates/: Anonymous.html  Funding.html  Home.html  MeetTheTeam.html  News.html  Tutorial.html  Updates.html  annotate.html  annotations.html  base.html  complete.html  empty.html  funding.html  home.html  index.html  login.html  login_popup.html  manage.html  news.html  password.html  register.html  search_results.html  style.css  tutorial.html  (+2 more)
(+498 files in other folders)
