[tool.poetry]
name = "project-web-app"
version = "0.1.0"
description = ""
authors = ["Felix Richards <felixarichards@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
alembic = "==0.9.8"
python-dotenv = "==0.10.1"
"psycopg2" = "==2.7.5"
Flask = "==1.0.2"
Flask-Babel = "==0.12.2"
Flask-Bootstrap = "==3.3.7.1"
Flask-Login = "==0.4.1"
Flask-Migrate = "==2.1.1"
Flask-SQLAlchemy = "==2.3.2"
Flask-WTF = "==0.14.2"
gunicorn = "==19.9.0"
WTForms = "==2.1"
SQLAlchemy = "==1.2.4"
Werkzeug = "==0.15.3"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"