[tool.poetry]
name = "project-web-app"
version = "0.1.0"
description = ""
authors = ["Felix Richards <felixarichards@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7"
alembic = "==0.9.8"
astropy = "==4.2"
opencv-python = "==4.5.1.48"
python-dotenv = "==0.10.1"
"psycopg2-binary" = "==2.8.6"
Flask = "==1.0.2"
Flask-Babel = "==2.0.0"
Flask-Bootstrap = "==3.3.7.1"
Flask-Login = "==0.4.1"
Flask-Migrate = "==2.6.0"
Flask-SQLAlchemy = "==2.4.4"
Flask-WTF = "==0.14.3"
gunicorn = "==19.9.0"
WTForms = "==2.1"
SQLAlchemy = "==1.3.23"
Werkzeug = "==1.0.1"

[tool.poetry.dev-dependencies]
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"